feat: Add AuditLogger class, remove LAB_REVIEW.md, and update DEMO_SCRIPT.md.